--- a/TestNinja/TestNinja.UnitTests/TestNinja.UnitTests.csproj
+++ b/TestNinja/TestNinja.UnitTests/TestNinja.UnitTests.csproj
@@ -54,6 +54,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerControllerTests.cs" />
+    <Compile Include="ErrorLogTests.cs" />
+    <Compile Include="HtmlFormatterTests.cs" />
     <Compile Include="ReservationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MathTests.cs" />
