add Tests for FizzBuzz and DemeritPoints classes

--- a/TestNinja/TestNinja.UnitTests/TestNinja.UnitTests.csproj
+++ b/TestNinja/TestNinja.UnitTests/TestNinja.UnitTests.csproj
@@ -55,7 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomerControllerTests.cs" />
-    <Compile Include="ErrorLogTests.cs" />
+    <Compile Include="DemeritPointsCalculatorTests.cs" />
+    <Compile Include="ErrorLoggerTests.cs" />
+    <Compile Include="FizzBuzzTests.cs" />
     <Compile Include="HtmlFormatterTests.cs" />
     <Compile Include="ReservationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
