Course done until mock exercicies

--- a/TestNinja/TestNinja/TestNinja.csproj
+++ b/TestNinja/TestNinja/TestNinja.csproj
@@ -58,13 +58,20 @@
     <Compile Include="Fundamentals\PhoneNumber.cs" />
     <Compile Include="Fundamentals\Reservation.cs" />
     <Compile Include="Fundamentals\Stack.cs" />
+    <Compile Include="Interfaces\IFileReader.cs" />
+    <Compile Include="Interfaces\IVideoRepository.cs" />
+    <Compile Include="Interfaces\IFileDownloader.cs" />
     <Compile Include="Mocking\BookingHelper.cs" />
     <Compile Include="Mocking\EmployeeController.cs" />
     <Compile Include="Mocking\InstallerHelper.cs" />
     <Compile Include="Mocking\OrderService.cs" />
     <Compile Include="Mocking\Product.cs" />
+    <Compile Include="Mocking\Program.cs" />
     <Compile Include="Mocking\VideoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\FileReader.cs" />
+    <Compile Include="Repository\VideoRepository.cs" />
+    <Compile Include="Repository\FileDownloader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
